# graph-sitter

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES_CHECKLIST.md  README.md  UI_INTEGRATION_SUMMARY.md  examples.md  hatch.toml  pyproject.toml  ruff.toml  run_mcp_server.py  skills.sh.json  test_events.py  test_kuzu_integration.py
.claude/: settings.json
.claude/agents/: architect-coordinator.md  python-implementation.md
.claude/commands/: 🧠.md  🧠concept.md  🧠execute_project.md
.github/: codecov.yml
.github/workflows/: auto-release.yml  docs-validate.yml  generate-docs.yml  mypy.yml  pre-commit.yml  release.yml  required-ci.yml  rust-rewrite-cli-smoke.yml  rust-rewrite-extension.yml  rust-rewrite-fast.yml  rust-rewrite-large-repos.yml  site-build.yml  test.yml  ty.yml
architecture/: architecture.md
architecture/3. imports-exports/: A. Imports.md
codegen-examples/: README.md  STRUCTURE.md  pyproject.toml
crates/graph-sitter-engine/: Cargo.toml
crates/graph-sitter-engine/examples/: index_python.rs
crates/graph-sitter-engine/src/: lib.rs
crates/graph-sitter-py/: Cargo.toml
crates/graph-sitter-py/src/: lib.rs
docs/: README.md  conftest.py  docs.json  mint.json
docs/api-reference/: openapi3.json
docs/benchmarks/: large-repos.mdx
docs/blog/: act-via-code.mdx  devin.mdx  fixing-import-loops.mdx  promise-to-async-await-twilio.mdx  static-analysis-ai.mdx
docs/building-with-codegen/: at-a-glance.mdx  class-api.mdx  codebase-visualization.mdx  codegen-with-wsl.mdx  comments-and-docstrings.mdx  commit-and-reset.mdx  dependencies-and-usages.mdx  dot-codegen.mdx  editables-and-behaviors.mdx  exports.mdx  (+19 more)
examples/: CONTRIBUTING.md  README.md  STRUCTURE.md  pyproject.toml
rust-rewrite/: agent-handoff.md  api-inventory.md  benchmarks.md  data-model.md  docs-site-strategy.md  docs-site-vercel-plan.md  engine-skeleton.md  future-agent-brief.md  p0-parity-coverage.json  parser-index.md  python-compat.md  resolution-algorithms.md  skill-distribution-plan.md  strategy.md  supported-subset.json  uvx-cli-plan.md  uvx-command-roadmap.md  uvx-skill-distribution-plan.md
site/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
ui/: .env.example  .gitignore  ACCESSIBILITY.md  README.md  jest.config.js  next.config.js  package.json  tailwind.config.js
workflow/: .claude.settings.json  complete-setup-script.sh  session_logger.py  stream_logger.py
(+1591 files in other folders)
