[package]
name = "graph-sitter-engine"
description = "Core Rust engine skeleton for graph-sitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "graph_sitter_engine"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true

[dev-dependencies]
serde_json.workspace = true
