[package]
name = "graph-sitter-engine"
description = "Core Rust engine skeleton for graph-sitter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "graph_sitter_engine"
path = "src/lib.rs"

[dependencies]
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
